kubernetes/k8s-deployment-mariadb.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mariadb-deployment
  labels:
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: phpughh/mariadb:10.6
          ports:
            - name: rdbms
              containerPort: 3306
          volumeMounts:
            - name: mariadb-pv
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-pv
          persistentVolumeClaim:
            claimName: mariadb-pv-claim
