kubernetes/k8s-deployment-traefik.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      terminationGracePeriodSeconds: 60
      containers:
        - name: traefik
          image: phpughh/traefik:2.9
          ports:
            - name: web
              containerPort: 80
            - name: dashboard
              containerPort: 8080
          args:
            - --api.insecure
            - --providers.kubernetesingress
            - --log.level=DEBUG
