kubernetes/k8s-service-mariadb.yaml
kind: Service
apiVersion: v1
metadata:
  name: mariadb-ingress-service
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      name: rdbms
  type: NodePort
