kubernetes/k8s-service-traefik-database.yaml
kind: Service
apiVersion: v1
metadata:
  name: traefik-mariadb-ingress-service
spec:
  type: LoadBalancer
  ports:
    - name: rdbms
      targetPort: rdbms
      port: 3306
  selector:
    app: traefik
