kubernetes/k8s-service-traefik-loadbalancer.yaml
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
spec:
  type: LoadBalancer
  ports:
    - name: web
      targetPort: web
      port: 80
  selector:
    app: traefik
