kubernetes/k8s-service-whoami.yaml
kind: Service
apiVersion: v1
metadata:
  name: whoami-ingress-service
spec:
  selector:
    app: whoami
  ports:
    - protocol: TCP
      port: 80
      name: web
  type: NodePort
