kubernetes/k8s-service-wordpress.yaml
kind: Service
apiVersion: v1
metadata:
  name: wordpress-ingress-service
spec:
  type: ClusterIP
  ports:
    - name: web
      targetPort: web
      port: 80
  selector:
    app: wordpress
