kubernetes/k8s-ingress-whoami.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: whoami-ingress
spec:
  rules:
  - host: whoami.phpug.hh
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: whoami-ingress-service
              port:
                name: web
