kubernetes/k8s-ingress-wordpress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: wordpress-ingress
spec:
  rules:
  - host: wordpress.phpug.hh
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: wordpress-ingress-service
              port:
                name: web
